--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -10,6 +10,7 @@
     padding-top: {{ site.data.theme.home-title-y-padding | default: '5em' }};
     padding-bottom: {{ site.data.theme.home-title-y-padding | default: '5em' }};
 }
+.bg-custom { background-color: rgba(190, 136, 10, 0.713);}
 @media screen and (max-width: 576px) {
     #home-title-box {
         max-height: 500px;
@@ -18,7 +19,7 @@
 </style>
 <div id="home-banner" class="container-fluid mb-0 p-0">
     <div id="home-title-box" class="position-relative" >
-        <div class="p-2 text-center text-white bg-dark bg-opacity-75">
+        <div class="p-2 text-center text-white bg-custom">
             {% if site.organization-logo-nav %}
             <a class="d-none d-md-block" href="{{ site.organization-link }}" target="_blank" rel="noopener">
                 <img id="home-banner-logo" src="{{ site.organization-logo-nav | relative_url }}" alt="{{ site.organization-name | escape }} home" >
