--- a/_includes/feature/jumbotron.html
+++ b/_includes/feature/jumbotron.html
@@ -43,6 +43,9 @@
     padding-bottom: {{ include.padding }};
 }
 {%- endif -%}
+
+.bg-custom { background-color: rgba(190, 136, 10, 0.713);}
+
 @media screen and (max-width: 576px) {
     .jumbo-title-box {
         max-height: 500px; 
@@ -53,7 +56,7 @@
 <div class="jumbotron feature px-0 border" id="{{ jumbo_div_id }}">
     <div class="jumbo-title-box">
         {% unless include.heading == false and include.text == false %}
-        <div class="p-2 text-center text-white bg-dark bg-opacity-75">
+        <div class="p-2 text-center text-white bg-custom">
             {% unless include.heading == false %}<h2 class="display-4">{{ include.heading | default: site.title }}</h2>{% endunless %}
             {% unless include.text == false %}<p class="jumbo-tagline">{{ include.text | default: site.tagline }}</p>{% endunless %}
         </div>
