editing site and futzing with colors/displays etc.

--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -10,7 +10,6 @@
     padding-top: {{ site.data.theme.home-title-y-padding | default: '5em' }};
     padding-bottom: {{ site.data.theme.home-title-y-padding | default: '5em' }};
 }
-.bg-custom { background-color: rgba(190, 136, 10, 0.713);}
 @media screen and (max-width: 576px) {
     #home-title-box {
         max-height: 500px;
@@ -34,16 +33,16 @@
     </div>
 </div>
 {%- else -%}
-<div class="container">
+<div class="container-fluid bg-custom-solid">
     <div class="row align-items-center">
         <div id="title" class="{% if site.organization-logo-banner %}col-md-9{% else %}col-12{% endif %}">
-            <h1 class="mt-2"><a class="text-dark" href="{{ site.baseurl }}/" >{{ site.title }}</a></h1>	 
-            {% if site.tagline %}<p>{{ site.tagline }}</p>{% endif %}
+            <h1 class="mt-2"><a class="text-white" href="{{ site.baseurl }}/" >{{ site.title }}</a></h1>	 
+            {% if site.tagline %}<p class="text-white">{{ site.tagline }}</p>{% endif %}
         </div>
         {% if site.organization-logo-banner %}
         <div class="col-md-3 d-none d-lg-block text-end">
-            <a class="btn btn-outline-light" href="{{ site.organization-link }}" target="_blank" rel="noopener">
-                <img class="img-fluid" src="{{ site.organization-logo-banner | relative_url }}" title="{{ site.organization-name }}" alt="{{ site.organization-name | escape }} home" >
+            <a class="btn" href="{{ site.organization-link }}" target="_blank" rel="noopener">
+                <img class="img-fluid" src="{{ site.organization-logo-banner | relative_url }}" title="{{ site.organization-name }}" alt="{{ site.organization-name | escape }} home">
             </a>
         </div>
         {% endif %}
