--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -9,14 +9,14 @@ layout: page
 
     {% include index/description.html %}
     
-    {% include index/featured-terms.html field="family" title="Family Classifications" btn-color="primary" %}
+    {% include index/featured-terms.html field="family" title="Family Classifications" btn-color= "outline-warning" %}
 
-    {% include index/featured-terms.html field="location_specific" title="Collected At" btn-color="primary" %}
+    {% include index/featured-terms.html field="location_specific" title="Collected At" btn-color= "outline-warning" %}
     
   </div>
   <div class="col-md-4">  
 
-    {% include index/carousel.html title="Herbarium Sheets" %}
+    {% include index/carousel.html title="Herbarium Sheets" height=520 %}
 
   </div>
   <div class="col-md-12">
