--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -4,3 +4,6 @@
 */
 
 .display-4 { color: white;}
+.bg-custom { background-color: rgba(62, 46, 7, 0.771);}
+.bg-custom-solid { background-color: rgba(62, 46, 7, 1);}
+.bg-btn-custom {background-color: rgb(2, 91, 14);}
