--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -4,6 +4,6 @@
 */
 
 .display-4 { color: white;}
-.bg-custom { background-color: rgba(62, 46, 7, 0.771);}
-.bg-custom-solid { background-color: rgba(62, 46, 7, 1);}
-.bg-btn-custom {background-color: rgb(2, 91, 14);}
+.bg-custom { background-color: #3e2e07c5;}
+.bg-custom-solid { background-color: #3e2e07;}
+.bg-btn-custom {background-color: #025b0e;}
