--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -33,19 +33,22 @@
     </div>
 </div>
 {%- else -%}
-<div class="container-fluid bg-custom-solid">
-    <div class="row align-items-center">
-        <div id="title" class="{% if site.organization-logo-banner %}col-md-9{% else %}col-12{% endif %}">
-            <h1 class="mt-2"><a class="text-white" href="{{ site.baseurl }}/" >{{ site.title }}</a></h1>	 
-            {% if site.tagline %}<p class="text-white">{{ site.tagline }}</p>{% endif %}
+<div class="container-fluid bg-custom-solid pt-3">
+    <div class="container">
+        <div class="row align-items-center">
+            <div id="title" class="{% if site.organization-logo-banner %}col-md-9{% else %}col-12{% endif %}">
+                <h1 class="mt-2"><a class="text-white" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+                {% if site.tagline %}<p class="text-white">{{ site.tagline }}</p>{% endif %}
+            </div>
+            {% if site.organization-logo-banner %}
+            <div class="col-md-3 d-none d-lg-block text-end">
+                <a class="btn" href="{{ site.organization-link }}" target="_blank" rel="noopener">
+                    <img class="img-fluid" src="{{ site.organization-logo-banner | relative_url }}"
+                        title="{{ site.organization-name }}" alt="{{ site.organization-name | escape }} home">
+                </a>
+            </div>
+            {% endif %}
         </div>
-        {% if site.organization-logo-banner %}
-        <div class="col-md-3 d-none d-lg-block text-end">
-            <a class="btn" href="{{ site.organization-link }}" target="_blank" rel="noopener">
-                <img class="img-fluid" src="{{ site.organization-logo-banner | relative_url }}" title="{{ site.organization-name }}" alt="{{ site.organization-name | escape }} home">
-            </a>
-        </div>
-        {% endif %}
     </div>
 </div>
 {%- endif -%}
